fix bio container scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,8 +169,8 @@ nav,
 }
 
 #rj-nav-bio {
- padding: 2px;
- margin: 0 auto;
+  padding: 2px;
+  margin: 0 auto;
 }
 
 div nav {
@@ -179,33 +179,53 @@ div nav {
   -webkit-box-shadow: 3px 3px 5px 1px #623a24;
   box-shadow: 3px 3px 5px 1px #623a24;
   background: #9d5d3a;
-
-}
+  
+  }
 
 .nav-tabs {
   border: none;
-  border-radius: 4px;
-  background-color: rgb(155,75,8);
-
-  margin: 4px;
+  border-radius: 6px;
+  background-color: rgb(155, 75, 8);
+  margin: 4px; 
+  height: 40px;
 }
 
 .nav-tabs .nav-item {
-font-size: 16px;
-  color: #304051;
-  border: 1px solid #0e243e;
+    display: flex;
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 400;
+  font-size: 14px;
+  color: #bacafa;
+  border: 1px solid #a4abb8;
   border-radius: 6px;
+  margin: 4px;
+  background-color: #454e53;
+  height: 30px;
+  align-items: center;
+}
 
-  background-color: rgba(206,100,10,0.6)
+.nav-tabs .nav-item:hover {
+    
+    color: #454e53;
+    background-color: #bacafa;
+    border: 1px solid #454e53;
+    
+
 }
 .nav-tabs .nav-item.active {
   background: #ce640a;
-  border: 1px solid #0e243e;
+  border: 2px inset #a4abb8;
   border-radius: 6px;
   height: 80%;
- 
+
   margin: 2px;
 }
+
+.tab-content {
+    width: 75%;
+}
+
+
 
 /* All div's with rj- are my custom div's (Reindert Jos) */
 
@@ -249,6 +269,7 @@ font-size: 16px;
 
 .rj-container2::-webkit-scrollbar {
   width: 10px;
+
 }
 
 .rj-container2::-webkit-scrollbar-thumb {
@@ -585,7 +606,7 @@ font-size: 16px;
   background: #9d5d3a;
   border: 1px solid #0e243e;
   border-radius: 6px;
-margin: 8px 4px;
+  margin: 8px 4px;
   -webkit-box-shadow: 3px 3px 5px 1px #623a24;
   box-shadow: 3px 3px 5px 1px #623a24;
   background: #9d5d3a;
